--- a/Wasleh/appsettings.Development.json
+++ b/Wasleh/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=OBAY\\SQLEXPRESS; Database=Wasleh; Trusted_Connection=True; trust server certificate=True"
+    //"DefaultConnection": "Server=db6127.public.databaseasp.net; Database=db6127; User Id=db6127; Password=fW_6X4n?=qK3; Encrypt=False; MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
