--- a/Wasleh/appsettings.json
+++ b/Wasleh/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db6127.public.databaseasp.net; Database=db6127; User Id=db6127; Password=fW_6X4n?=qK3; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db6135.public.databaseasp.net; Database=db6135; User Id=db6135; Password=f%2X4W?h=wQ8; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
